syntax = "proto3";

message OperationResponse {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_SUCCESS = 1;
    STATUS_FAILED = 2;
    STATUS_NOT_FOUND = 3;
    STATUS_INVALID_INPUT = 4;
    STATUS_CONFLICT = 5;
  }
  
  Status status = 1;
  string message = 2;
}