syntax = "proto3";

message PaginationInfo {
  int32 total_count = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}